--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
 
-<script src="wildfire.js"></script>
+<script src="js/wildfire.js"></script>
 <title>World Wildfire Map </title>
 </head>
 <body>
+<h1> This is a world map of all the wildfires</h1>
 <div id="world_map">
+    
 </div>
 </body>
 </html>
