--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <title>World Wildfire Map </title>
 </head>
 <body>
-<h1> This is a world map of all the wildfires</h1>
+<h1 style="text-align: center"> Total Hectares of Land burnt in wildfires in 2025</h1>
 <div id="world_map">
     
 </div>
