--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h1 style="text-align: center"></h1>
-<div id="world_map">
+<div id="interactive_map"></div>
     
 </div>
 </body>
