changing some of the data files to match names

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 <h1 style="text-align: center"></h1>
 <div id="interactive_map"></div>
+<div id="global_temp"> </div>
     
 </div>
 </body>
