adding more wildfire data

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h1 style="text-align: center"></h1>
 <div id="interactive_map"></div>
 <div id="global_temp"> </div>
-    
+<div id="global_rain"> </div>
 </div>
 </body>
 </html>
