--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <title>World Wildfire Map </title>
 </head>
 <body>
-<div class="banner"><h1 style="text-align: center"> TITLE OF VISUALIZATION</h1></div>
+<div class="banner"><h1 style="text-align: center"> WILDFIRES AND THE EFFECT OF GLOBAL VARIABLES</h1></div>
 
 <div class="main">
     <div class = "Row"> 
-        <h2>We are looking to investigate the global affects of environment and how the potential changes in rainfall and temperatures may contribute to a change 
-        in wildfire severity and occurence. Select a country using the boxes above to look further into the data about these countries! You can have a look at the rainfall worldwide as well by selecting "Rainfall" in the map select dropdown.
-        </h2>
+        <p>We are looking to investigate the global affects of environment and how the potential changes in rainfall and temperatures may contribute to a change 
+        in wildfire severity and occurence. <br><b>Select a country using the dropboxes below </b> to look further into the data about these countries! You can have a look at the rainfall worldwide as well by selecting <b>"Rainfall"</b> in the map select dropdown.
+        </p>
     </div>
 
     <div class = "Row" id="interactive_map">
@@ -29,9 +29,13 @@
 
 
     <div class = "Row"> 
-        <h2>We are looking to investigate the global affects of environment and how the potential changes in rainfall and temperatures may contribute to a change 
-        in wildfire severity and occurence. Select a country using the boxes above to look further into the data about these countries! You can have a look at the rainfall worldwide as well by selecting "Rainfall" in the map select dropdown.
-        </h2>
+        <p>An interesting trend in the above data showing how despite Brazil having consistently the highest number of fires, the severity of these fires are quite low. When compared to a country like Australia who has lower numbers of fires but a higher average landmass
+            burnt per year, Brazil seems not to suffer as much damage in terms of area burnt. <br> Another interesting highlight is how countries that have more of a rainforest or jungle environment (such as Indonesia or Argentina) tend to have lower amounts of wildfire activity,
+            possibly due to the nature of the weather in those areas.
+        </p>
+    </div>
+    <div class="Row">
+        <div class="banner"><h2 style="text-align: center"> Global Environmental Trends</h2></div>
     </div>
     <div class = "Row">
         <div  class = "Column2" id="global_temp"> 
