--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </p>
     </div>
 
-    <div class = "Row" id="interactive_map">
+    <div class = "Row" id="interactive_map" style="background-color: #ffeea4;">
     </div>
 
 
     <div class = "Row"> 
         <p>An interesting trend in the above data showing how despite Brazil having consistently the highest number of fires, the severity of these fires are quite low. When compared to a country like Australia who has lower numbers of fires but a higher average landmass
-            burnt per year, Brazil seems not to suffer as much damage in terms of area burnt. <br> Another interesting highlight is how countries that have more of a rainforest or jungle environment (such as Indonesia or Argentina) tend to have lower amounts of wildfire activity,
-            possibly due to the nature of the weather in those areas.
+            burnt per year, Brazil seems not to suffer as much damage in terms of area burnt. <br> <br> Another interesting highlight is how countries that have more of a rainforest or jungle environment (such as Indonesia or Argentina) tend to have lower amounts of wildfire activity,
+            possibly due to the nature of the weather in those areas. <br> <br> It is also highly visible that the countries that lie within the tropics have a lower overall wildfire effect and a higher average rainfall.
         </p>
     </div>
     <div class="Row">
@@ -45,9 +45,9 @@
     </div>
     <div class = "Row">
             <p>On the left is a comparison of the global temperature changes from countries of varying environments. It's clear to see that over the past 30 years,
-            there as been very little variation in the average temperature. This is expected and shows that at least in this short term, there are no apparent trends that are easily determined.
+            there as been very little variation in the average temperature. This is expected and shows that at least in this short term, there are no apparent trends that are easily determined. <br><br>
             The average rainfall chart on the right helps to show just how varied the amount of rain can be for different climates with countries such as Indonesia situated in the tropics having significantly more rain,
-            with a larger variance on it's annual rainfall
+            with a larger variance on it's annual rainfall, it shows the importance of rainfall in the wildfire occurence chance as Indonesia has the highest average temperature and yet has one of the lowest wildfire occurence rates out of all of the compared countries.
             </p>
         </div>
 
