--- a/index.html
+++ b/index.html
@@ -52,5 +52,7 @@
         </div>
 
     </div>
+
+    <div class="credits"><p>Date published: 18/10/2025 <br><br> Author: Dilshan Fernando<br><br> Data sources: <br> [1] https://data.worldbank.org/indicator/AG.LND.PRCP.MM?end=2021&start=1961&view=chart&year=2018 <br> [2] https://ourworldindata.org/wildfires <br> [3] https://www.kaggle.com/datasets/nafayunnoor/annual-number-of-wildfires-per-country-2012-2025  </p></div>
 </body>
 </html>
